--- a/src/main/resources/templates/user-panel.html
+++ b/src/main/resources/templates/user-panel.html
@@ -6,13 +6,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
 
-<!--Шапка страницы-->
 <header>
     <div class="container-fluid" style="padding: 0">
         <div class="row">
@@ -37,12 +35,9 @@
     </div>
 </header>
 
-<!--Основной контент страницы-->
-
 <div class="container-fluid">
     <div class="row">
 
-        <!--Панель слева-->
 
         <div class="col-2" style="padding: 0; padding-top: 15px">
             <ul class="nav nav-pills flex-column">
@@ -52,15 +47,11 @@
             </ul>
         </div>
 
-        <!--Панель справа-->
-
         <div class="col-10 bg-light">
             <div class="tab-content" style="padding-top: 15px; height: 100vh">
 
-                <!--Панель пользователя-->
-
                 <div class="tab-pane fade show active" id="userPanel">
-                    <h2>User information-page</h2>
+                    <h2>User panel</h2>
                     <div class="card">
                         <h5 class="card-header">About user</h5>
                         <div class="card-body text-center">
@@ -69,7 +60,7 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Name</th>
-                                    <th>Last Name</th>
+                                    <th>Surname</th>
                                     <th>Email</th>
                                     <th>Role</th>
                                 </tr>
@@ -86,8 +77,6 @@
     </div>
 </div>
 
-<!-- Отдельные JS для Popper и Bootstrap -->
-
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -97,8 +86,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
-
-<!-- JS -->
 
 <script type="text/javascript" src="UserPage.js"></script>
 </body>
